@@ -1,9 +1,10 @@
 [OPTIONS]
 map_difference =  True
 map_seasons    =  True
+map_season_difference = True
 reichler_plot  =  True
 gleckler_plot   =  True
-hovmoeller_plot   =  True
+hovmoeller_plot   =  False
 regional_analysis = False
 global_mean    = True
 vmin           =  0.
@@ -41,7 +42,7 @@ obs_file = #get_data_pool_directory() + 'variables/land/surface_radiation_flux_i
 obs_var  = SIS
 scale_data = 1.
 gleckler_position = 1
-add_to_report = True
+add_to_report = False
 valid_mask = land
 
 [CERES]
